-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.5.1, Qt Creator 4.6.0-beta1
-
None
-
Windows 10 1709 64 bit
MSVC2015 64 bit
- Start Creator with empty settings, e.g. by passing the parameter -settingspath <empty directory>.
- Open a project.
- Build the project.
You won't see a progress bar indicating the build process.
There should be an indicator that Creator is building in the background. Creator 4.5 did this right.
- is duplicated by
-
QTCREATORBUG-19898 Buttons to enable/disable build jobs disappear on hover.
-
- Closed
-
-
QTCREATORBUG-19957 Buttons in Build-Steps not visualized correctly
-
- Closed
-
-
QTCREATORBUG-19810 Project build steps buttons disappear on mouse over
-
- Closed
-
- replaces
-
QTCREATORBUG-19939 Presentation mode not usable any more
-
- Closed
-
-
QTCREATORBUG-19945 Zoom indicator doesn't work with Qt 5.10.1
-
- Closed
-
- resulted from
-
QTBUG-66803 [Reg 5.9.3->5.9.4] Widgets with graphics opacity effect with value 1.0 are invisible
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-19716 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 221037,3 | Work around Qt issue that setting 1.0 on opacity effect hides widget | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 221901,2 | Add another opacity effect workaround | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 221909,3 | Cover more 1.0 opacity cases | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |