Cover more 1.0 opacity cases

Task-number: QTCREATORBUG-19716
Change-Id: Ia9abed20ffd816c35f5aacc1d837b1ed81ec2b61
Reviewed-by: Eike Ziller <eike.ziller@qt.io>